--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,7 +1,7 @@
 nz-card {
-  margin: 9% auto 0;
-  width: 320px;
-  padding: 1em 0.5em 1.2em;
+  margin: 8% auto 0;
+  width: 420px;
+  padding: 1.2em 1.5em;
   box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
 
   .logo {
