--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -2,17 +2,18 @@ nz-header {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 45px;
-  line-height: 45px;
-  padding: 0 12px ;
+  height: 64px;
+  line-height: 64px;
+  padding: 0 12px;
   z-index: 999;
-  box-shadow: 0 1px 4px rgb(0 21 41 / 8%);
+  //box-shadow: 0 1px 4px rgb(0 21 41 / 8%);
+  border-bottom: 1px solid #f0f0f0;
   background: #fff;
   transition: width 0.2s;
 
   .logo {
-    height: 45px;
-    line-height: 45px;
+    height: 50px;
+    line-height: 50px;
     width: 51px;
     text-align: center;
     background: url('/assets/logo.png') #fff no-repeat center;
@@ -22,6 +23,8 @@ nz-header {
 
 .center {
   padding: 0 12px;
+  height: 100%;
+  line-height: 60px;
 
   &:hover,
   &:focus {
