--- a/src/app/common/blank/blank.component.html
+++ b/src/app/common/blank/blank.component.html
@@ -12,7 +12,7 @@
     </nz-space>
     <p>
       <span nz-icon nzType="copyright"></span>
-      <span> {{ year }} 研发于 </span>
+      <span> {{ year }} developed by </span>
       <a href="https://github.com/weplanx" target="_blank"> <b>WEPLANX </b> <span nz-icon nzType="github"></span></a>
     </p>
   </nz-footer>
