--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,10 +33,11 @@ nz-sider.tree-sider {
   width: 180px;
 }
 
-//.content {
-//  padding: 8px;
-//}
+.content {
+  padding: 8px;
+}
 
 .highlight {
   color: red;
 }
+
