--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,21 +1,21 @@
 <app-blank>
   <nz-card [nzBordered]="false" [nzBorderless]="false">
-    <div class="title">欢迎使用</div>
+    <div class="title">SIGN IN</div>
     <form [formGroup]="form" nz-form nzLayout="vertical" (wpxSubmit)="submit($event)">
       <nz-form-item>
-        <nz-form-label><b>电子邮件</b></nz-form-label>
+        <nz-form-label><b>Email</b></nz-form-label>
         <nz-form-control>
           <nz-input-group [nzSuffix]="identitySuffix" nzPrefixIcon="mail">
             <ng-template #identitySuffix>
               <span *ngIf="email.value" nz-icon nzType="close-circle" (click)="email.reset()"> </span>
             </ng-template>
-            <input type="email" nz-input formControlName="email" placeholder="请输入电子邮件" />
+            <input type="email" nz-input formControlName="email" placeholder="Please enter email" />
           </nz-input-group>
         </nz-form-control>
       </nz-form-item>
 
       <nz-form-item>
-        <nz-form-label><b>密码</b><a style="margin-left: 0.5em" routerLink="/forget"> 忘记了？</a></nz-form-label>
+        <nz-form-label><b>Password</b><a style="margin-left: 0.5em" routerLink="/forget"> forget？</a></nz-form-label>
         <nz-form-control>
           <nz-input-group [nzSuffix]="passwordSuffix" nzPrefixIcon="lock">
             <ng-template #passwordSuffix>
@@ -26,7 +26,7 @@
               type="password"
               formControlName="password"
               autocomplete="new-password"
-              placeholder="请输入密码"
+              placeholder="Please enter password"
             />
           </nz-input-group>
         </nz-form-control>
@@ -34,14 +34,14 @@
       <nz-form-item>
         <nz-form-control>
           <button nz-button nzBlock nzType="primary" [nzLoading]="loading" [disabled]="!form.valid">
-            <b>登 录</b>
+            <b>LOGIN</b>
           </button>
         </nz-form-control>
       </nz-form-item>
 
-      <nz-divider nzPlain nzText="其它登录方式"></nz-divider>
+      <nz-divider nzPlain nzText="OR"></nz-divider>
       <nz-space>
-        <a *nzSpaceItem nz-tooltip="飞书" (click)="feishuOAuth()">
+        <a *nzSpaceItem nz-tooltip="FeiShu" (click)="feishuOAuth()">
           <nz-avatar [nzSize]="30" nzShape="square" [nzSrc]="['assets', 'lark.svg'] | wpxAssets"></nz-avatar>
         </a>
       </nz-space>
