--- a/src/app/namespace/namespace.component.html
+++ b/src/app/namespace/namespace.component.html
@@ -5,10 +5,10 @@
         nz-menu-item
         nzMatchRouter
         [routerLink]="['/', v.namespace, 'pages']"
-        nz-tooltip="内容生成器"
+        nz-tooltip="工作台"
         nzTooltipPlacement="right"
       >
-        <span nz-icon nzType="layout"></span>
+        <span nz-icon nzType="desktop"></span>
       </li>
       <li
         nz-menu-item
