--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -27,7 +27,7 @@
 
         <nz-breadcrumb *nzSpaceItem nzAutoGenerate style="padding-left: 1em">
           <nz-breadcrumb-item>
-            <a [routerLink]="['/']"><span nz-icon nzType="home"></span> 首页 </a>
+            <a [routerLink]="['/']"><span nz-icon nzType="home"></span> Home </a>
           </nz-breadcrumb-item>
         </nz-breadcrumb>
       </nz-space>
