--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,9 @@
 <app-blank>
   <nz-card [nzBordered]="false" [nzBorderless]="false">
-    <div class="title">SIGN IN</div>
+    <div class="title" i18n>SIGN IN</div>
     <form [formGroup]="form" nz-form nzLayout="vertical" (wpxSubmit)="submit($event)">
       <nz-form-item>
-        <nz-form-label><b>Email</b></nz-form-label>
+        <nz-form-label><b i18n>Email</b></nz-form-label>
         <nz-form-control>
           <nz-input-group [nzSuffix]="identitySuffix" nzPrefixIcon="mail">
             <ng-template #identitySuffix>
@@ -15,7 +15,9 @@
       </nz-form-item>
 
       <nz-form-item>
-        <nz-form-label><b>Password</b><a style="margin-left: 0.5em" routerLink="/forget"> forget？</a></nz-form-label>
+        <nz-form-label
+          ><b i18n>Password</b><a style="margin-left: 0.5em" routerLink="/forget" i18n> forget？</a></nz-form-label
+        >
         <nz-form-control>
           <nz-input-group [nzSuffix]="passwordSuffix" nzPrefixIcon="lock">
             <ng-template #passwordSuffix>
@@ -34,12 +36,12 @@
       <nz-form-item>
         <nz-form-control>
           <button nz-button nzBlock nzType="primary" [nzLoading]="loading" [disabled]="!form.valid">
-            <b>LOGIN</b>
+            <b i18n>LOGIN</b>
           </button>
         </nz-form-control>
       </nz-form-item>
 
-      <nz-divider nzPlain nzText="OR"></nz-divider>
+      <nz-divider nzPlain nzText="OR" i18n-nzText></nz-divider>
       <nz-space>
         <a *nzSpaceItem nz-tooltip="FeiShu" (click)="feishuOAuth()">
           <nz-avatar [nzSize]="30" nzShape="square" [nzSrc]="['assets', 'lark.svg'] | wpxAssets"></nz-avatar>
