--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -8,10 +8,10 @@
         <ng-container *nzSpaceItem>
           <button nz-button nzType="text">
             <span nz-icon nzType="appstore"></span>
-            <ng-container *ngIf="app.project as p">
-              <span>{{ p.name }}</span>
-            </ng-container>
-            <ng-template #adminRef> <span>应用中心</span> </ng-template>
+            <!--            <ng-container *ngIf="app.project as p">-->
+            <!--              <span>{{ p.name }}</span>-->
+            <!--            </ng-container>-->
+            <!--            <ng-template #adminRef> <span>应用中心</span> </ng-template>-->
           </button>
           <nz-dropdown-menu #menu="nzDropdownMenu">
             <ul nz-menu>
