--- a/src/app/forget/forget.component.html
+++ b/src/app/forget/forget.component.html
@@ -1,135 +1,117 @@
-<app-blank>
-  <nz-card [nzBordered]="false" [nzBorderless]="false">
-    <nz-page-header nzBackIcon nzTitle="找回密码">
-      <nz-page-header-content>
-        <nz-steps style="padding: 16px" [nzCurrent]="step" nzProgressDot>
-          <nz-step nzTitle="验证"></nz-step>
-          <nz-step nzTitle="重置"></nz-step>
-          <nz-step nzTitle="完成"></nz-step>
-        </nz-steps>
-      </nz-page-header-content>
-    </nz-page-header>
+<nz-card [nzBordered]="false" [nzBorderless]="false">
+  <nz-page-header nzBackIcon nzTitle="Retrieve Your Password" i18n-nzTitle>
+    <nz-page-header-content>
+      <nz-steps style="padding: 16px" [nzCurrent]="step" nzProgressDot>
+        <nz-step nzTitle="Verify" i18n-nzTitle></nz-step>
+        <nz-step nzTitle="Reset" i18n-nzTitle></nz-step>
+        <nz-step nzTitle="Complete" i18n-nzTitle></nz-step>
+      </nz-steps>
+    </nz-page-header-content>
+  </nz-page-header>
 
-    <ng-container [ngSwitch]="step">
-      <ng-container *ngSwitchCase="0">
-        <form
-          *ngIf="verifyForm"
-          class="content"
-          nz-form
-          nzLayout="vertical"
-          [formGroup]="verifyForm"
-          (wpxSubmit)="verify($event)"
-        >
-          <nz-form-item>
-            <nz-form-label nzRequired>验证方式</nz-form-label>
-            <nz-form-control>
-              <nz-select formControlName="mode">
-                <nz-option nzValue="email" nzLabel="电子邮件"></nz-option>
-              </nz-select>
-            </nz-form-control>
-          </nz-form-item>
+  <ng-container [ngSwitch]="step">
+    <ng-container *ngSwitchCase="0">
+      <form
+        *ngIf="verifyForm"
+        class="content"
+        nz-form
+        nzLayout="vertical"
+        [formGroup]="verifyForm"
+        (wpxSubmit)="verify($event)"
+      >
+        <nz-form-item>
+          <nz-form-label nzRequired i18n>Mode</nz-form-label>
+          <nz-form-control>
+            <nz-select formControlName="mode">
+              <nz-option nzValue="email" nzLabel="Email" i18n-nzLabel></nz-option>
+            </nz-select>
+          </nz-form-control>
+        </nz-form-item>
 
-          <nz-form-item>
-            <nz-form-label nzRequired>电子邮件</nz-form-label>
-            <nz-form-control
-              nzHasFeedback
-              [nzAutoTips]="{
-                default: {
-                  required: '电子邮件不能为空',
-                  email: '电子邮件格式不规范'
-                }
-              }"
-            >
-              <input type="email" formControlName="email" nz-input placeholder="例如：mail@example.com" />
-            </nz-form-control>
-          </nz-form-item>
+        <nz-form-item>
+          <nz-form-label nzRequired i18n>Email</nz-form-label>
+          <nz-form-control nzHasFeedback [nzAutoTips]="tips.email">
+            <input type="email" formControlName="email" nz-input placeholder="mail@example.com" />
+          </nz-form-control>
+        </nz-form-item>
 
-          <nz-form-item>
-            <nz-form-label nzRequired>验证码</nz-form-label>
-            <nz-form-control
-              nzExtra="*电子邮件可能因个人设置被自动拦截"
-              [nzAutoTips]="{
-                default: {
-                  required: '验证码不能为空'
-                }
-              }"
-            >
-              <nz-input-group nzSearch [nzAddOnAfter]="getCaptchaBtn">
-                <input nz-input formControlName="captcha" />
-                <ng-template #getCaptchaBtn>
-                  <button nz-button type="button" (click)="getCaptcha()" [disabled]="countdown !== 0">
-                    <ng-container *ngIf="!countdown; else countdownTpl">获取验证码</ng-container>
-                    <ng-template #countdownTpl>{{ countdown }} 秒</ng-template>
-                  </button>
-                </ng-template>
-              </nz-input-group>
-            </nz-form-control>
-          </nz-form-item>
+        <nz-form-item>
+          <nz-form-label nzRequired i18n>Verification Code</nz-form-label>
+          <nz-form-control
+            nzExtra="*Emails may be automatically blocked due to personal settings"
+            i18n-nzExtra
+            [nzAutoTips]="tips.captcha"
+          >
+            <nz-input-group nzSearch [nzAddOnAfter]="getCaptchaBtn">
+              <input nz-input formControlName="captcha" />
+              <ng-template #getCaptchaBtn>
+                <button nz-button type="button" (click)="getCaptcha()" [disabled]="countdown !== 0">
+                  <ng-container *ngIf="!countdown; else countdownTpl" i18n>Get</ng-container>
+                  <ng-template #countdownTpl>
+                    <span i18n>{{ countdown }} s</span>
+                  </ng-template>
+                </button>
+              </ng-template>
+            </nz-input-group>
+          </nz-form-control>
+        </nz-form-item>
 
-          <nz-form-item>
-            <nz-form-control>
-              <button nz-button [disabled]="!verifyForm.value">提交验证</button>
-            </nz-form-control>
-          </nz-form-item>
-        </form>
-      </ng-container>
-      <ng-container *ngSwitchCase="1">
-        <form
-          *ngIf="pwdForm"
-          class="content"
-          nz-form
-          nzLayout="vertical"
-          [formGroup]="pwdForm"
-          (wpxSubmit)="submit($event)"
-        >
-          <nz-form-item>
-            <nz-form-label nzRequired>新密码</nz-form-label>
-            <nz-form-control
-              nzHasFeedback
-              [nzAutoTips]="{
-                default: {
-                  required: '用户密码不能为空',
-                  minlength: '用户密码长度不能小于12位',
-                  lowercase: '用户密码必须包含小写字母',
-                  uppercase: '用户密码必须包含大写字母',
-                  number: '用户密码必须包含数字',
-                  symbol: '用户密码必须包含符号(@$!%*?&-+)'
-                }
-              }"
-            >
-              <nz-input-group [nzSuffix]="suffixTemplate">
-                <ng-template #suffixTemplate>
-                  <i
-                    nz-icon
-                    [nzType]="passwordVisible ? 'eye-invisible' : 'eye'"
-                    (click)="passwordVisible = !passwordVisible"
-                  ></i>
-                </ng-template>
-                <input
-                  [type]="passwordVisible ? 'text' : 'password'"
-                  nz-input
-                  autocomplete="new-password"
-                  formControlName="password"
-                  placeholder="请填写用户密码"
-                />
-              </nz-input-group>
-            </nz-form-control>
-          </nz-form-item>
-
-          <nz-form-item>
-            <nz-form-control>
-              <button nz-button [disabled]="!pwdForm.value">提交</button>
-            </nz-form-control>
-          </nz-form-item>
-        </form>
-      </ng-container>
-      <ng-container *ngSwitchCase="2">
-        <nz-result nzStatus="success" nzTitle="用户密码已重置">
-          <div nz-result-extra>
-            <button nz-button nzType="primary" routerLink="/login">回到登录页</button>
-          </div>
-        </nz-result>
-      </ng-container>
+        <nz-form-item>
+          <nz-form-control>
+            <button nz-button [disabled]="!verifyForm.value" i18n>Submit</button>
+          </nz-form-control>
+        </nz-form-item>
+      </form>
     </ng-container>
-  </nz-card>
-</app-blank>
+    <ng-container *ngSwitchCase="1">
+      <form
+        *ngIf="pwdForm"
+        class="content"
+        nz-form
+        nzLayout="vertical"
+        [formGroup]="pwdForm"
+        (wpxSubmit)="submit($event)"
+      >
+        <nz-form-item>
+          <nz-form-label nzRequired i18n>New Password</nz-form-label>
+          <nz-form-control nzHasFeedback [nzAutoTips]="tips.password">
+            <nz-input-group [nzSuffix]="suffixTemplate">
+              <ng-template #suffixTemplate>
+                <i
+                  nz-icon
+                  [nzType]="passwordVisible ? 'eye-invisible' : 'eye'"
+                  (click)="passwordVisible = !passwordVisible"
+                ></i>
+              </ng-template>
+              <input
+                [type]="passwordVisible ? 'text' : 'password'"
+                nz-input
+                autocomplete="new-password"
+                formControlName="password"
+                placeholder="Please enter the new password"
+                i18n-placeholder
+              />
+            </nz-input-group>
+          </nz-form-control>
+        </nz-form-item>
+
+        <nz-form-item>
+          <nz-form-control>
+            <button nz-button [disabled]="!pwdForm.value" i18n>Submit</button>
+          </nz-form-control>
+        </nz-form-item>
+      </form>
+    </ng-container>
+    <ng-container *ngSwitchCase="2">
+      <nz-result nzStatus="success" nzTitle="Your password has been updated" i18n-nzTitle>
+        <div nz-result-extra>
+          <button nz-button nzType="primary" routerLink="/login" i18n>Back Sign In</button>
+        </div>
+      </nz-result>
+    </ng-container>
+  </ng-container>
+</nz-card>
+
+<div class="translation">
+  <app-translation></app-translation>
+</div>
