--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,54 +1,56 @@
-<app-blank>
-  <nz-card [nzBordered]="false" [nzBorderless]="false">
-    <div class="title" i18n>SIGN IN</div>
-    <form [formGroup]="form" nz-form nzLayout="vertical" (wpxSubmit)="submit($event)">
-      <nz-form-item>
-        <nz-form-label><b i18n>Email</b></nz-form-label>
-        <nz-form-control>
-          <nz-input-group [nzSuffix]="identitySuffix" nzPrefixIcon="mail">
-            <ng-template #identitySuffix>
-              <span *ngIf="email.value" nz-icon nzType="close-circle" (click)="email.reset()"> </span>
-            </ng-template>
-            <input type="email" nz-input formControlName="email" placeholder="Please enter email" i18n-placeholder />
-          </nz-input-group>
-        </nz-form-control>
-      </nz-form-item>
+<nz-card [nzBordered]="false" [nzBorderless]="false">
+  <div class="title" i18n>SIGN IN</div>
+  <form [formGroup]="form" nz-form nzLayout="vertical" (wpxSubmit)="submit($event)">
+    <nz-form-item>
+      <nz-form-label><b i18n>Email</b></nz-form-label>
+      <nz-form-control>
+        <nz-input-group [nzSuffix]="identitySuffix" nzPrefixIcon="mail">
+          <ng-template #identitySuffix>
+            <span *ngIf="email.value" nz-icon nzType="close-circle" (click)="email.reset()"> </span>
+          </ng-template>
+          <input type="email" nz-input formControlName="email" placeholder="Please enter email" i18n-placeholder />
+        </nz-input-group>
+      </nz-form-control>
+    </nz-form-item>
 
-      <nz-form-item>
-        <nz-form-label>
-          <b i18n>Password</b>
-          <a style="margin-left: 0.5em" routerLink="/forget" i18n> forget？</a>
-        </nz-form-label>
-        <nz-form-control>
-          <nz-input-group [nzSuffix]="passwordSuffix" nzPrefixIcon="lock">
-            <ng-template #passwordSuffix>
-              <span *ngIf="password.value" nz-icon nzType="close-circle" (click)="password.reset()"> </span>
-            </ng-template>
-            <input
-              nz-input
-              type="password"
-              formControlName="password"
-              autocomplete="new-password"
-              placeholder="Please enter password"
-              i18n-placeholder
-            />
-          </nz-input-group>
-        </nz-form-control>
-      </nz-form-item>
-      <nz-form-item>
-        <nz-form-control>
-          <button nz-button nzBlock nzType="primary" [nzLoading]="loading" [disabled]="!form.valid">
-            <b i18n>LOGIN</b>
-          </button>
-        </nz-form-control>
-      </nz-form-item>
+    <nz-form-item>
+      <nz-form-label>
+        <b i18n>Password</b>
+        <a style="margin-left: 0.5em" routerLink="/forget" i18n> forget？</a>
+      </nz-form-label>
+      <nz-form-control>
+        <nz-input-group [nzSuffix]="passwordSuffix" nzPrefixIcon="lock">
+          <ng-template #passwordSuffix>
+            <span *ngIf="password.value" nz-icon nzType="close-circle" (click)="password.reset()"> </span>
+          </ng-template>
+          <input
+            nz-input
+            type="password"
+            formControlName="password"
+            autocomplete="new-password"
+            placeholder="Please enter password"
+            i18n-placeholder
+          />
+        </nz-input-group>
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+      <nz-form-control>
+        <button nz-button nzBlock nzType="primary" [nzLoading]="loading" [disabled]="!form.valid">
+          <b i18n>LOGIN</b>
+        </button>
+      </nz-form-control>
+    </nz-form-item>
 
-      <nz-divider nzPlain nzText="OR" i18n-nzText></nz-divider>
-      <nz-space>
-        <a *nzSpaceItem nz-tooltip="FeiShu" i18n-nz-tooltip (click)="feishuOAuth()">
-          <nz-avatar [nzSize]="30" nzShape="square" [nzSrc]="['assets', 'lark.svg'] | wpxAssets"></nz-avatar>
-        </a>
-      </nz-space>
-    </form>
-  </nz-card>
-</app-blank>
+    <nz-divider nzPlain nzText="OR" i18n-nzText></nz-divider>
+    <nz-space>
+      <a *nzSpaceItem nz-tooltip="FeiShu" i18n-nz-tooltip (click)="feishuOAuth()">
+        <nz-avatar [nzSize]="30" nzShape="square" [nzSrc]="['assets', 'lark.svg'] | wpxAssets"></nz-avatar>
+      </a>
+    </nz-space>
+  </form>
+</nz-card>
+
+<div class="translation">
+  <app-translation></app-translation>
+</div>
