--- a/src/app/namespace/overview/overview.component.html
+++ b/src/app/namespace/overview/overview.component.html
@@ -1,4 +1,4 @@
-<nz-layout class="nested" style="overflow: hidden">
+<nz-layout class="common-layout">
   <nz-sider nzWidth="280px" nzTheme="light">
     <ul *ngIf="app.project as p" nz-menu nzMode="inline">
       <li nz-menu-group nzTitle="全局配置">
@@ -36,7 +36,7 @@
     </ul>
   </nz-sider>
 
-  <nz-layout style="overflow: auto">
+  <nz-layout class="inner-layout">
     <nz-content class="content">
       <router-outlet></router-outlet>
     </nz-content>
